# TripPlaner

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  mvp1.md  prd.md  review1.md  参考.md  重构建议.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/agent/: context.py  react.py  streaming.py
backend/app/agent/providers/: __init__.py  anthropic.py  base.py  deepseek.py  models.py  openai.py
backend/app/api/: deps.py  middleware.py
backend/app/api/routes/: chat.py  health.py  map.py  trip.py
backend/app/api/v1/routes/: map.py  trips.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/memory/: chat_history.py  long_term.py  manager.py  models.py  short_term.py
backend/app/models/: agent.py  schemas.py  trip.py  user.py
backend/app/rag/: embedder.py  loader.py  retriever.py  store.py
backend/app/repositories/: CRUD.py
backend/app/services/: trip_service.py  user_service.py
backend/app/tools/: base.py  langchain_tools.py  registry.py
backend/app/tools/local/: amap_direct.py  currency.py  date_utils.py  route_optimizer.py
backend/app/tools/mcp/: adapter.py  manager.py
backend/app/workflow/: __init__.py  engine.py  graph.py  nodes.py  schemas.py  state.py  trip_planning.py
backend/data/knowledge/: beijing.md  shanghai.md
backend/tests/: conftest.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: DayPlanCard.vue  MapView.vue  TripForm.vue
(+5 files in other folders)
